objects/ssot__FinancialApplicationItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicantVisibleStatus__c</fullName>
        <label>Applicant Visible Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationItemId__c</fullName>
        <label>Application Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementMethod__c</fullName>
        <label>Disbursement Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DownPaymentAmount__c</fullName>
        <label>Down Payment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedAutomaticPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Opted Automatic Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedElectronicStatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Opted Electronic Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Application Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsATMCardRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ATM Card Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsCheckbookRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checkbook Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LoanPurposeDescription__c</fullName>
        <label>Loan Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoanType__c</fullName>
        <label>Loan Type Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoantoValueRatioNumber__c</fullName>
        <label>Loan to Value Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnershipType__c</fullName>
        <label>Ownership Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedAmount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedTermMonths__c</fullName>
        <label>Requested Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>